fix java 8